--- a/Services/neon-dashboard/neon-dashboard.csproj
+++ b/Services/neon-dashboard/neon-dashboard.csproj
@@ -24,6 +24,7 @@
 		<PackageReference Include="Analytics" Version="3.8.0" />
 		<PackageReference Include="Blazor-Analytics" Version="3.10.0" />
 		<PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
+		<PackageReference Include="ChartJs.Blazor.Fork" Version="2.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.1" />
     <PackageReference Include="GitInfo" Version="2.2.0">
@@ -37,7 +38,6 @@
 		<PackageReference Include="prometheus-net" Version="6.0.0" />
 		<PackageReference Include="prometheus-net.AspNetCore" Version="6.0.0" />
 		<PackageReference Include="prometheus-net.DotNetRuntime" Version="4.2.2" />
-		<PackageReference Include="PSC.Blazor.Components.Chartjs" Version="6.0.8" />
 		<PackageReference Include="Tailwind.Extensions.AspNetCore" Version="1.0.0-beta3" />
 	</ItemGroup>
 
