--- a/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
+++ b/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
@@ -56,8 +56,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="KubernetesClient" Version="7.0.15" />
-		<PackageReference Include="KubeOps" Version="6.5.0" />
+		<PackageReference Include="KubernetesClient" Version="7.2.19" />
+		<PackageReference Include="KubeOps" Version="7.0.0-prerelease.2" />
 		<PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
 	</ItemGroup>
 
