--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -40,7 +40,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="KubeOps" Version="6.5.0" />
+		<PackageReference Include="KubeOps" Version="7.0.0-prerelease.2" />
 	</ItemGroup>
 
 	<ItemGroup>
