added some tolerations

--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/deployment.yaml
@@ -23,6 +23,10 @@ spec:
       nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
       priorityClassName: {{ .Values.priorityClassName }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: operator
         image: "{{ .Values.operator.image.organization }}/{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}"
