--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
@@ -71,6 +71,10 @@ spec:
     nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
     priorityClassName: {{ .Values.priorityClassName }}
+    {{- with .Values.tolerations }}
+    tolerations:
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
     affinity:
       podAntiAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
