--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/operator.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/operator.yaml
@@ -21,6 +21,10 @@ spec:
       nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
       priorityClassName: {{ .Values.priorityClassName }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: grafana-operator
           image: {{ .Values.operator.image.organization }}/{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}
