turned Dex to dark mode

--- a/Lib/Neon.Kube.Setup/Resources/Helm/dex/templates/configmap.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/dex/templates/configmap.yaml
@@ -15,6 +15,10 @@ data:
       http: 0.0.0.0:5556
       tlsCert: /etc/dex/tls/tls.crt
       tlsKey: /etc/dex/tls/tls.key
+    frontend: 
+      dir: /srv/dex/web
+      issuer: SSO Login - {{ .Values.cluster.name }}
+      theme: dark
     connectors:
     - type: ldap
       # Required field for connector id.
