--- a/Lib/Neon.Kube.Operator/Neon.Kube.Operator.csproj
+++ b/Lib/Neon.Kube.Operator/Neon.Kube.Operator.csproj
@@ -49,7 +49,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="JsonPatch.Net" Version="1.1.2" />
-		<PackageReference Include="KubeOps" Version="7.0.0-prerelease.2" />
+		<PackageReference Include="KubeOps" Version="6.5.3" />
 		<PackageReference Include="KubernetesClient" Version="7.2.19" />
 		<PackageReference Include="prometheus-net" Version="6.0.0" />
 	</ItemGroup>
