--- a/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
+++ b/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
@@ -56,7 +56,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="KubeOps" Version="7.0.0-prerelease.2" />
+		<PackageReference Include="KubeOps" Version="6.5.3" />
 		<PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
 	</ItemGroup>
 
