--- a/Services/neon-node-agent/neon-node-agent.csproj
+++ b/Services/neon-node-agent/neon-node-agent.csproj
@@ -42,7 +42,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="KubeOps" Version="6.5.3" />
+		<PackageReference Include="KubeOps" Version="7.0.0-prerelease.2" />
 		<PackageReference Include="Tomlyn" Version="0.3.1" />
 	</ItemGroup>
 
