--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/ingress.yaml
@@ -14,7 +14,7 @@ spec:
             prefix: /
       route:
         - destination:
-            host: {{ include "neon-dashboard.fullname" . }}.neon-system.svc.cluster.local
+            host: {{ .Values.ingress.subdomain }}.{{ include "neon-dashboard.fullname" . }}.neon-system.svc.cluster.local
             port:
               number: {{ .Values.service.port }}
 ---
