--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -45,13 +45,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-        - name: CONTAINERREGISTRY_RECONCILE_REQUEUE_INTERVAL
+        - name: CONTAINERREGISTRY_IDLE_INTERVAL
           value: 5m
         - name: CONTAINERREGISTRY_ERROR_MIN_REQUEUE_INTERVAL
           value: 15s
         - name: CONTAINERREGISTRY_ERROR_MAX_REQUEUE_INTERVAL
           value: 10m
-        - name: NODETASK_RECONCILED_NOCHANGE_INTERVAL
+        - name: NODETASK_IDLE_INTERVAL
           value: 1m
         - name: NODETASK_ERROR_MIN_REQUEUE_INTERVAL
           value: 15s
