--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
@@ -6,9 +6,9 @@ rules:
 - apiGroups:
   - neonkube.io
   resources:
-  - containerregistries
-  - nodetasks
-  - nodetasks/status
+  - neoncontainerregistries
+  - neonnodetasks
+  - neonnodetasks/status
   verbs:
   - get
   - list
