--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -45,18 +45,20 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: WATCHER_MAX_RETRY_INTERVAL
+          value: 15s
         - name: CONTAINERREGISTRY_IDLE_INTERVAL
-          value: 5m
+          value: 60s
         - name: CONTAINERREGISTRY_ERROR_MIN_REQUEUE_INTERVAL
-          value: 15s
+          value: 5s
         - name: CONTAINERREGISTRY_ERROR_MAX_REQUEUE_INTERVAL
-          value: 10m
+          value: 60s
         - name: NODETASK_IDLE_INTERVAL
-          value: 1m
+          value: 60s
         - name: NODETASK_ERROR_MIN_REQUEUE_INTERVAL
-          value: 15s
+          value: 5s
         - name: NODETASK_ERROR_MAX_REQUEUE_INTERVAL
-          value: 10m
+          value: 60s
         envFrom:
         - configMapRef:
             name: neon-node-agent-webhook
