--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -109,7 +109,7 @@
 		<None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
 		<None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\configmap.yaml" />
-		<None Remove="Resources\Helm\neon-cluster-operator\templates\deployment.yaml" />
+		<None Remove="Resources\Helm\neon-cluster-operator\templates\daemonset.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
 		<None Remove="Resources\Helm\neon-dashboard\templates\clusterrole.yaml" />
