[neon-cluster-operator]:NodeTaskController deletes tasks not assigned to an existing node

--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/rbac.yaml
@@ -6,7 +6,7 @@ rules:
 - apiGroups:
   - neonkube.io
   resources:
-  - neoncontainerregistries
+  - neonclusteroperators
   - neonnodetasks
   - neonnodetasks/status
   verbs:
