--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/daemonset.yaml
@@ -48,6 +48,12 @@ spec:
           value: 15s
         - name: CLUSTEROPERATOR_ERROR_MAX_REQUEUE_INTERVAL
           value: 60s
+        - name: NODETASK_IDLE_INTERVAL
+          value: 60s
+        - name: NODETASK_ERROR_MIN_REQUEUE_INTERVAL
+          value: 5s
+        - name: NODETASK_ERROR_MAX_REQUEUE_INTERVAL
+          value: 60s
         envFrom:
         - configMapRef:
             name: neon-cluster-operator-webhook
