--- a/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/configmap-template.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/configmap-template.yaml
@@ -270,7 +270,7 @@ data:
     auth:
       token:
         issuer: harbor-token-issuer
-        realm: https://registry.{{ .Values.cluster.domain }}/service/token
+        realm: https://{{ .Values.neonkube.clusterDomain.harborRegistry }}.{{ .Values.cluster.domain }}/service/token
         rootcertbundle: /harbor_cust_cert/registry-harbor-harbor-core-tokencert.crt
         service: harbor-registry
     notifications:
