--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/kiali-cr.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/kiali-cr.yaml
@@ -18,7 +18,7 @@ spec:
     strategy: header
     openid:
       client_id: "kubernetes"
-      issuer_uri: "https://sso.{{ .Values.cluster.domain }}"
+      issuer_uri: "https://{{ .Values.neonkube.clusterDomain.sso }}.{{ .Values.cluster.domain }}"
       username_claim: "email"
       scopes:
         - openid
@@ -44,7 +44,7 @@ spec:
         username: kiali
       enabled: true
       in_cluster_url: http://grafana.neon-monitor:3000
-      url: https://grafana.{{ .Values.cluster.domain }}
+      url: https://{{ .Values.neonkube.clusterDomain.grafana }}.{{ .Values.cluster.domain }}
     istio:
       component_status:
         enabled: true
