--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   gateways:
     - neoncluster-gateway
   hosts:
-    - {{ .Values.ingress.subdomain }}.{{ .Values.cluster.domain }}
+    - {{ .Values.neonkube.clusterDomain.grafana }}.{{ .Values.cluster.domain }}
   http:
     - match:
         - uri:
