--- a/Lib/Neon.Kube.Setup/Resources/Helm/oauth2-proxy/templates/configmap.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/oauth2-proxy/templates/configmap.yaml
@@ -13,7 +13,7 @@ metadata:
   name: {{ template "oauth2-proxy.fullname" . }}
 data:
   oauth2_proxy.cfg: {{ .Values.config.configFile | quote }}
-  loginUrl: https://sso.{{ .Values.cluster.domain }}
-  issuerUrl: https://sso.{{ .Values.cluster.domain }}
+  loginUrl: https://{{ .Values.neonkube.clusterDomain.sso }}.{{ .Values.cluster.domain }}
+  issuerUrl: https://{{ .Values.neonkube.clusterDomain.sso }}.{{ .Values.cluster.domain }}
 {{- end }}
 {{- end }}
