--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -116,6 +116,10 @@
 		<Content Include="bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).pdb" PackagePath="contentFiles\any\$(TargetFramework)\$(AssemblyName).pdb" PackageCopyToOutput="true" Pack="true" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Model\CRDs\Harbor\" />
+	</ItemGroup>
+
 	<!--
     Generates the [KubernetesWithRetry.cs] file.
     -->
