--- a/Lib/Neon.Kube.Setup/Resources/Helm/metrics-server/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/metrics-server/values.yaml
@@ -6,3 +6,9 @@ image:
   organization: neon-registry.node.local
   repository: metrics-server
   tag: v0.4.2
+
+serviceMonitor:
+  enabled: false
+  additionalLabels: {}
+  interval: 1m
+  scrapeTimeout: 10s
