--- a/Lib/Neon.Kube.Setup/Resources/Helm/calico/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/calico/values.yaml
@@ -23,3 +23,9 @@ kubernetes:
   service:
     host: kubernetes-masters
     port: 6442
+
+# ServiceMonitor configuration
+serviceMonitor:
+  enabled: true
+  interval: 60s
+  scrapeTimeout: 30s
