--- a/Lib/Neon.Kube.Setup/Resources/Helm/keycloak/templates/virtualservice.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/keycloak/templates/virtualservice.yaml
@@ -30,7 +30,7 @@ metadata:
   namespace: neon-ingress
 spec:
   gateways:
-    - neoncluster-gateway
+    - neon-ingress/neoncluster-gateway
   hosts:
     - {{ .Values.ingress.subdomain }}.{{ .Values.cluster.domain }}
   http:
