--- a/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/kiali/templates/ingress.yaml
@@ -2,10 +2,10 @@
 kind: VirtualService
 metadata:
   name: kiali-dashboard-virtual-service
-  namespace: neon-ingress
+  namespace: {{ .Release.Namespace }}
 spec:
   gateways:
-    - neoncluster-gateway
+    - neon-ingress/neoncluster-gateway
   hosts:
     - {{ .Values.neonkube.clusterDomain.kiali }}.{{ .Values.cluster.domain }}
   http:
