--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
@@ -7,6 +7,9 @@
 #
 # We also use this for specifying temporary DEBUG related configurations.
 
+nameOverride: ""
+fullnameOverride: ""
+
 # Number of replicas to be deployed.
 
 replicaCount: 1
@@ -21,10 +24,8 @@ image:
 
 resource:
   limits:
-    cpu: 100m
     memory: 110Mi
   requests:
-    cpu: 100m
     memory: 64Mi
 
 serviceMesh:
@@ -33,3 +34,20 @@ serviceMesh:
 # Log level: none, critical, serror, error, warn, sinfo, info, transient, debug
 
 logLevel: info
+
+metrics:
+  # Enable Prometheus metrics endpoint
+  enabled: true
+  # Serve Prometheus metrics on this port
+  port: 9762
+  servicemonitor:
+    # Enable Prometheus Operator ServiceMonitor
+    enabled: true
+    # Define the namespace where to deploy the ServiceMonitor resource
+    namespace: ""
+    # Prometheus scrape interval
+    interval: 60s
+    # Prometheus scrape timeout
+    scrapeTimeout: 30s
+    # Add custom labels to the ServiceMonitor resource
+    labels: {}
