--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/ingress.yaml
@@ -2,19 +2,19 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: neon-dashboard
-  namespace: neon-ingress
+  namespace: {{ .Release.Namespace }}
 spec:
   gateways:
-    - neoncluster-gateway
+    - neon-ingress/neoncluster-gateway
   hosts:
-    - {{ .Values.cluster.domain }}
+    - {{ .Values.neonkube.clusterDomain.neonDashboard }}.{{ .Values.cluster.domain }}
   http:
     - match:
         - uri:
             prefix: /
       route:
         - destination:
-            host: {{ .Values.neonkube.clusterDomain.neonDashboard }}.{{ include "neon-dashboard.fullname" . }}.neon-system.svc.cluster.local
+            host: {{ include "neon-dashboard.fullname" . }}.neon-system.svc.cluster.local
             port:
               number: {{ .Values.service.port }}
 ---
