--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/templates/ingress.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/templates/ingress.yaml
@@ -2,10 +2,10 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: neon-sso-session-proxy
-  namespace: neon-ingress
+  namespace: {{ .Release.Namespace }}
 spec:
   gateways:
-    - neoncluster-gateway
+    - neon-ingress/neoncluster-gateway
   hosts:
     - {{ .Values.neonkube.clusterDomain.sso }}.{{ .Values.cluster.domain }}
   http:
