--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/servicemonitor.yaml
@@ -17,6 +17,5 @@ spec:
       - {{ .Release.Namespace }}
   selector:
     matchLabels:
-      app: {{ template "postgres-operator.name" . }}
-      release: {{ .Release.Name }}
+      app: neon-system-db
 {{- end }}
