--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -84,6 +84,7 @@
 		<None Remove="Resources\Helm\memcached\templates\_names.tpl" />
 		<None Remove="Resources\Helm\memcached\templates\_tplvalues.tpl" />
 		<None Remove="Resources\Helm\memcached\templates\_warnings.tpl" />
+		<None Remove="Resources\Helm\metrics-server\templates\serviceMonitor.yaml" />
 		<None Remove="Resources\Helm\mimir\templates\alertmanager\alertmanager-dashboard-resources.yaml" />
 		<None Remove="Resources\Helm\mimir\templates\alertmanager\alertmanager-dashboard.yaml" />
 		<None Remove="Resources\Helm\mimir\templates\compactor\compactor-dashboard-resources.yaml" />
@@ -114,17 +115,22 @@
 		<None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\configmap.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\deployment.yaml" />
+		<None Remove="Resources\Helm\neon-cluster-operator\templates\service.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
+		<None Remove="Resources\Helm\neon-cluster-operator\templates\servicemonitor.yaml" />
+		<None Remove="Resources\Helm\neon-cluster-operator\templates\_helpers.tpl" />
 		<None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
 		<None Remove="Resources\Helm\neon-dashboard\templates\clusterrole.yaml" />
 		<None Remove="Resources\Helm\neon-dashboard\templates\clusterrolebinding.yaml" />
-		<None Remove="Resources\Helm\neon-dashboard\templates\configmap.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\.helmignore" />
 		<None Remove="Resources\Helm\neon-node-agent\Chart.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\configmap.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\daemonset.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\rbac.yaml" />
+		<None Remove="Resources\Helm\neon-node-agent\templates\service.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\serviceaccount.yaml" />
+		<None Remove="Resources\Helm\neon-node-agent\templates\servicemonitor.yaml" />
+		<None Remove="Resources\Helm\neon-node-agent\templates\_helpers.tpl" />
 		<None Remove="Resources\Helm\neon-node-agent\values.yaml" />
 		<None Remove="Resources\Helm\postgres-operator\templates\configmap-metric-exporter.yaml" />
 		<None Remove="Resources\Helm\postgres-operator\templates\healthcheck-role.yaml" />
