--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/clusterrole.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/clusterrole.yaml
@@ -12,3 +12,12 @@ rules:
       - ""
     resources:
       - configmaps
+  - verbs:
+      - get
+      - list
+      - watch
+      - update
+    apiGroups:
+      - 'neonkube.io'
+    resources:
+      - neondashboards
