--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/values.yaml
@@ -397,7 +397,15 @@ podPriorityClassName: ""
 
 resources:
   limits:
+    cpu: 500m
     memory: 500Mi
+  requests:
+    cpu: 50m
+    memory: 50Mi
+
+operatorResources:
+  limits:
+    memory: 128Mi
   requests:
     memory: 50Mi
 
