--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/deployment.yaml
@@ -55,7 +55,7 @@ spec:
           value: {{ template "postgres-operator.controllerID" . }}
       {{- end }}
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+{{ toYaml .Values.operatorResources | indent 10 }}
         securityContext:
 {{ toYaml .Values.securityContext | indent 10 }}
       {{- if .Values.imagePullSecrets }}
