#1599: Probably as goo as this is going to get

--- a/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
+++ b/Lib/Neon.Kube.ResourceDefinitions/Neon.Kube.ResourceDefinitions.csproj
@@ -71,6 +71,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Neon.JsonConverters\Neon.JsonConverters.csproj" />
+	  <ProjectReference Include="..\Neon.Kube\Neon.Kube.csproj" />
 	</ItemGroup>
 
 </Project>
