--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
@@ -17,7 +17,9 @@ replicaCount: 1
 # Container image details.
 
 image:
+  organization: neon-registry.node.local
   repository: neon-cluster-operator
+  tag: neonkube-0.6.0-alpha
   pullPolicy: IfNotPresent
 
 # Resource requests and limits
@@ -31,9 +33,23 @@ resource:
 serviceMesh:
   enabled: true
 
+podAnnotations: {}
+
 # Log level: none, critical, serror, error, warn, sinfo, info, transient, debug
 
 logLevel: info
+
+service:
+  type: ClusterIP
+  ports:
+    - name: http-web
+      port: 80
+      protocol: TCP
+      targetPort: 5000
+    - name: https-web
+      protocol: TCP
+      port: 443
+      targetPort: 5001
 
 metrics:
   # Enable Prometheus metrics endpoint
