--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -2,23 +2,23 @@
 kind: DaemonSet
 metadata:
   labels:
-    app: neon-node-agent
+    {{- include "neon-node-agent.labels" . | nindent 4 }}
   name: neon-node-agent
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app: neon-node-agent
+      {{- include "neon-node-agent.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app: neon-node-agent
+        {{- include "neon-node-agent.selectorLabels" . | nindent 8 }}
         kubectl.kubernetes.io/default-container: neon-node-agent
       annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/path: "/"
-        prometheus.io/port: "9762"
+      {{- with .Values.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
         sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
     spec:
       serviceAccountName: neon-node-agent
@@ -93,10 +93,12 @@ spec:
           periodSeconds: 5
           timeoutSeconds: 1
         ports:
-        - name: http
+        - name: http-web
           containerPort: 5000
+        - name: https-web
+          containerPort: 5001
         - name: http-metrics
-          containerPort: 9762
+          containerPort: {{ .Values.metrics.port }}
           protocol: TCP
         resources:
           {{- toYaml .Values.resources | nindent 10 }}
